--- a/apps/benchmark/Cargo.toml
+++ b/apps/benchmark/Cargo.toml
@@ -5,3 +5,14 @@ authors = ["Seiya Nuta <nuta@seiya.me>"]
 
 [dependencies]
 resea = { path = "../../libs/resea" }
+
+[profile.release]
+opt-level = 2
+debug = false
+rpath = false
+lto = true
+debug-assertions = false
+codegen-units = 1
+panic = 'abort'
+incremental = false
+overflow-checks = false
