--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["staticlib"]
 path = "lib.rs"
 
 [profile.release]
-opt-level = "s"
+opt-level = 2
 debug = false
 rpath = false
 lto = true
