--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,6 @@ install:
   - pip3 install -r tools/requirements.txt
 
 script:
-  - make defconfig
+  - ./tools/buildconfig.py default STARTUPS=kernel-test
   - make -j2
+  - make run
