[travis] don't build unnecessary apps

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ install:
   - pip3 install -r tools/requirements.txt
 
 script:
-  - ./tools/buildconfig.py default STARTUPS=kernel-test
+  - ./tools/buildconfig.py default STARTUPS=kernel-test APPS=
   - make -j2
   - make run
