--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[{*.c,*.h,*.S,*.py}]
+[{*.c,*.h,*.S,*.py,Kconfig}]
 indent_style = space
 indent_size = 4
 
