--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ install:
   - pip3 install -r tools/requirements.txt
 
 script:
-  - make loadconfig CONFIG=misc/ci/$TRAVIS_OS_NAME.config
+  - loadconfig CONFIG=misc/ci/$TRAVIS_OS_NAME.config
+  - make reloadconfig
   - make info
   - make -j2
   - make run
