--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
   - pip3 install -r tools/requirements.txt
 
 script:
-  - loadconfig CONFIG=misc/ci/$TRAVIS_OS_NAME.config
+  - defconfig misc/ci/$TRAVIS_OS_NAME.config
   - make reloadconfig
   - make info
   - make -j2
