[ci] Build in release mode

--- a/misc/ci/osx.config
+++ b/misc/ci/osx.config
@@ -5,11 +5,24 @@ CONFIG_ARCH_X64=y
 # Build options
 #
 CONFIG_BUILD_DIR="build"
-CONFIG_BUILD_DEBUG=y
-# CONFIG_BUILD_RELEASE is not set
+# CONFIG_BUILD_DEBUG is not set
+CONFIG_BUILD_RELEASE=y
 CONFIG_LLVM_PREFIX="/usr/local/opt/llvm/bin/"
 CONFIG_GRUB_PREFIX="/usr/local/opt/i386-elf-grub/bin/i386-elf-"
 # end of Build options
+
+#
+# Kernel
+#
+
+#
+# x64-specific options
+#
+# CONFIG_TEXT_UI is not set
+# end of x64-specific options
+
+CONFIG_FASTPATH=y
+# end of Kernel
 
 #
 # Servers
