[kernel] Use prefetching in the IPC fastpath for experiment
It's disabled by default because there's room for discussion whether
the prefetching really improves the performance:

https://lwn.net/Articles/404103/

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -8,4 +8,8 @@ config FASTPATH
     bool "Enable IPC fastpath"
     default y
 
+config PREFETCH
+    bool "Utilize prefetching"
+    default y
+
 endmenu # "Kernel"
