Rename pc_kbd to ps2 and support PS/2 mouse

--- a/misc/ci/linux.config
+++ b/misc/ci/linux.config
@@ -35,7 +35,7 @@ CONFIG_KERNEL_TEST_SERVER=y
 #
 # Memory Management Server (memmgr)
 #
-# CONFIG_PC_KBD_SERVER is not set
+# CONFIG_PS2_SERVER is not set
 # end of Servers
 
 #
