--- a/misc/ci/osx.config
+++ b/misc/ci/osx.config
@@ -35,7 +35,7 @@ CONFIG_KERNEL_TEST_SERVER=y
 #
 # Memory Management Server (memmgr)
 #
-# CONFIG_PC_KBD_SERVER is not set
+# CONFIG_PS2_SERVER is not set
 # end of Servers
 
 #
