--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ addons:
       - xorriso
       - python3
       - python3-pip
+      - python3-setuptools
 
 install:
   - pip3 install -r tools/requirements.txt
