--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 sudo: false
-dist: bionic
-osx_image: xcode11.2
-os:
-  - osx
 
 language: rust
 rust:
@@ -12,6 +8,15 @@ cache: cargo
 
 notifications:
   email: false
+
+jobs:
+  include:
+    - os: osx
+      osx_image: xcode11.2
+      env: LLVM_PREFIX=/usr/local/opt/llvm/bin/
+    - os: linux
+      dist: bionic
+      env: LLVM_PREFIX=/usr/bin/ LLVM_SUFFIX=-8
 
 addons:
   homebrew:
@@ -32,6 +37,7 @@ addons:
       - grub2
       - xorriso
       - python3
+      - python3-dev
       - python3-pip
       - python3-setuptools
 
