travis: Run user-lint test

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,18 @@ jobs:
     - os: osx
       osx_image: xcode11.2
       env: CMD=build
-    - os: osx
-      osx_image: xcode11.2
-      env: CMD=kernel-lint
     - os: linux
       dist: bionic
       env: CMD=build LLVM_PREFIX=/usr/bin/ LLVM_SUFFIX=-8
+    - os: osx
+      osx_image: xcode11.2
+      env: CMD=kernel-lint
+    - os: osx
+      osx_image: xcode11.2
+      env: CMD=user-lint
+  allow_failures:
+    - env: CMD=kernel-lint
+    - env: CMD=user-lint
 
 addons:
   homebrew:
