travis: Try fixing Netlify deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,8 @@ script:
 deploy:
   provider: netlify
   edge: true
+  site: "$NETLIFY_SITE_ID"
+  auth: "$NETLIFY_AUTH_TOKEN"
   dir: build/docs
   on:
     condition: "$CMD = docs"
