editorconfig: Add .md

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,10 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
+[{*.md}]
+indent_style = space
+indent_size = 4
+
 [{*.c,*.rs,*.S,*.py}]
 indent_style = space
 indent_size = 4
