--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ addons:
       - python3-setuptools
 
 install:
-  - brew link --overwrite python
+  - "if [[ \"$TRAVIS_OS_NAME\" == osx ]]; then brew link --overwrite python; fi"
   - pip3 install -r tools/requirements.txt
   - cargo install xargo || true
   - cargo install mdbook || true
