--- a/book.toml
+++ b/book.toml
@@ -8,7 +8,7 @@ src = "docs"
 
 [output.html]
 mathjax-support = true
-git-repository-url = "https://github.com/seiyanuta/resea"
+git-repository-url = "https://github.com/nuta/resea"
 
 [output.html.search]
 limit-results = 20
