--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
     packages:
       - llvm
       - python
+      - mtools
   apt:
     packages:
       - llvm-8
@@ -26,6 +27,7 @@ addons:
       - python3-dev
       - python3-pip
       - python3-setuptools
+      - mtools
 
 install:
   - "if [[ \"$TRAVIS_OS_NAME\" == osx ]]; then brew link --overwrite python; fi"
