--- a/servers/ps2kbd/Kconfig
+++ b/servers/ps2kbd/Kconfig
@@ -1,2 +1,10 @@
-config PS2KBD_SERVER
+menuconfig PS2KBD_SERVER
     bool "PS/2 keyboard driver"
+
+if PS2KBD_SERVER
+
+config AUTOSTART_PS2KBD
+    bool "Start automatically on boot"
+    default y
+
+endif
