--- a/servers/ramdisk/Kconfig
+++ b/servers/ramdisk/Kconfig
@@ -1,2 +1,10 @@
-config RAMDISK_SERVER
-    bool "ramdisk (ephemeral) storage device"
+menuconfig RAMDISK_SERVER
+    bool "Ramdisk (ephemeral) storage device"
+
+if RAMDISK_SERVER
+
+config AUTOSTART_RAMDISK
+    bool "Start automatically on boot"
+    default y
+
+endif
