--- a/servers/tarfs/Kconfig
+++ b/servers/tarfs/Kconfig
@@ -1,2 +1,10 @@
-config TARFS_SERVER
+menuconfig TARFS_SERVER
     bool "Tarball (ephemeral) file system server"
+
+if TARFS_SERVER
+
+config AUTOSTART_TARFS
+    bool "Start automatically on boot"
+    default y
+
+endif
