--- a/Kconfig
+++ b/Kconfig
@@ -32,6 +32,17 @@ config GRUB_PREFIX
     default "$(DEFAULT_GRUB_PREFIX)"
 endmenu
 
+menu "Kernel"
+    config TASK_NAME_LEN
+        int "The maximum length of a task name"
+        range 4 64
+        default 16
+    config TASK_TIME_SLICE_MS
+        int "The context switching time slice in milliseconds."
+        range 5 200
+        default 10
+endmenu
+
 menu "Servers"
     config BOOTSTRAP
         string "The bootstrap server"
