Refactor the build system

--- a/Kconfig
+++ b/Kconfig
@@ -1,18 +1,4 @@
-mainmenu "Resea Build Configuration"
-
-choice
-    prompt "Target CPU architecture"
-config ARCH_X64
-    bool "x86_64"
-config ARCH_ARM
-    bool "ARM (micro:bit)"
-    select NOMMU
-endchoice
-
-menu "Build options"
-config BUILD_DIR
-    string "Build directory"
-    default "build"
+mainmenu "Resea Build Configuration ($(ARCH))"
 
 choice
     prompt "Build mode"
@@ -21,19 +7,6 @@ config BUILD_DEBUG
 config BUILD_RELEASE
     bool "Release"
 endchoice
-
-config LLVM_PREFIX
-    string "Clang/LLD/LLVM toolchain prefix"
-    default "$(DEFAULT_LLVM_PREFIX)"
-
-config LLVM_SUFFIX
-    string "Clang/LLD/LLVM toolchain suffix"
-    default "$(DEFAULT_LLVM_SUFFIX)"
-
-config GRUB_PREFIX
-    string "GRUB commands prefix"
-    default "$(DEFAULT_GRUB_PREFIX)"
-endmenu
 
 source "kernel/Kconfig"
 source "libs/resea/Kconfig"
