--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ addons:
       - mtools
   apt:
     packages:
-      - llvm-8
-      - lld-8
-      - clang-8
+      - llvm-9
+      - lld-9
+      - clang-9
       - python3
       - python3-dev
       - python3-pip
@@ -35,4 +35,4 @@ install:
 
 script:
   - make defconfig
-  - make build -j2
+  - make build -j2 LLVM_PREFIX=/usr/lib/llvm-9/bin/
