--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ jobs:
       osx_image: xcode11.2
     - os: linux
       dist: bionic
+      env:
+        - LLVM_PREFIX=/usr/lib/llvm-9/bin/
 
 addons:
   homebrew:
@@ -35,4 +37,4 @@ install:
 
 script:
   - make defconfig
-  - make build -j2 LLVM_PREFIX=/usr/lib/llvm-9/bin/
+  - make build -j2
