--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
     packages:
       - llvm
       - python
+      - qemu
   apt:
     packages:
       - llvm-9
@@ -28,6 +29,7 @@ addons:
       - python3-dev
       - python3-pip
       - python3-setuptools
+      - qemu-system-x86
 
 install:
   - pip3 install --user -r tools/requirements.txt
