Initial support for Raspberry Pi 3 (AArch64)
It works on QEMU!

We need to implement IRQ handling, timer driver, SMP, kdebug, ...

--- a/Kconfig
+++ b/Kconfig
@@ -4,6 +4,8 @@ choice
     prompt "Target CPU architecture"
     config ARCH_X64
         bool "x86_64"
+    config ARCH_ARM64
+        bool "Raspberry Pi 3 (AArch64)"
     config ARCH_ARM
         bool "micro:bit (ARM)"
 endchoice
