kernel/arm64: Add CONFIG_TRACE_EXCEPTION

--- a/kernel/arch/arm64/Kconfig
+++ b/kernel/arch/arm64/Kconfig
@@ -5,4 +5,8 @@ menu "ARM64 Options"
         string
         default "arm64"
 
+    config TRACE_EXCEPTION
+        bool "Trace exceptions (including system calls)"
+        default n
+
 endmenu
