ci: Add arm_release test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,15 @@ jobs:
           - os: ubuntu-20.04
             ARCH: x64
           - os: ubuntu-20.04
-            ARCH: arm
-          - os: ubuntu-20.04
             ARCH: arm64
+          - os: ubuntu-20.04
+            ARCH: arm
           - os: ubuntu-20.04
             ARCH: x64_release
           - os: ubuntu-20.04
             ARCH: arm64_release
+          - os: ubuntu-20.04
+            ARCH: arm_release
           - os: macos-latest
             ARCH: x64
     steps:
