--- a/servers/Kconfig
+++ b/servers/Kconfig
@@ -52,6 +52,9 @@ menu "Servers"
             config E1000_SERVER
                 tristate "e1000 NIC driver"
         endmenu
+
+        config HELLO_FROM_RUST_SERVER
+                tristate "Hello World from Rust"
     endmenu
 
     source "servers/*/Kconfig"
