--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,17 @@ jobs:
             TARGET: arm64_release
           - os: ubuntu-20.04
             TARGET: arm_release
+          - os: macos-latest
+            TARGET: x64
           - os: ubuntu-20.04
             TARGET: minlin
             EXPECTED: "built-in shell (ash)"
           - os: ubuntu-20.04
             TARGET: tcpip
             EXPECTED: "dhcp: leased ip=10.0.2.15"
-          - os: macos-latest
-            TARGET: x64
+          - os: ubuntu-20.04
+            TARGET: rust
+            EXPECTED: "Hello World from Rust!"
     steps:
       - uses: actions/checkout@v2
 
@@ -40,6 +43,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+
+      - name: Set up Rust
+        run: |
+          cargo install cargo-xbuild
+          rustup override set nightly
 
       - name: Install apt packages
         if: matrix.os == 'ubuntu-20.04'
