ci: rustup component add rust-src

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Set up Rust
         run: |
           cargo install cargo-xbuild
+          rustup component add rust-src
           rustup override set nightly
 
       - name: Install apt packages
