kconfig: Increase the maximum number of symbols
Rust binaries (especially `core` crate) tend to contain
many symbols. Increase the maximum number for a workaround.

--- a/ci/rust.config
+++ b/ci/rust.config
@@ -7,7 +7,7 @@ CONFIG_BUILD_DEBUG=y
 #
 # Common Setup (kernel and userland)
 #
-CONFIG_NUM_SYMBOLS=2048
+CONFIG_NUM_SYMBOLS=4096
 # end of Common Setup (kernel and userland)
 
 #
@@ -33,7 +33,7 @@ CONFIG_ABI_EMU=y
 #
 # Userland
 #
-CONFIG_BULK_BUFFER_LEN=16384
+CONFIG_OOL_BUFFER_LEN=16384
 # end of Userland
 
 CONFIG_MODULES=y
@@ -89,6 +89,6 @@ CONFIG_BOOTSTRAP="bootstrap"
 # end of Bootstrap
 
 #
-# Hello World from RUST
+# Hello World from Rust
 #
 # end of Servers
