--- a/ci/arm64.config
+++ b/ci/arm64.config
@@ -42,8 +42,8 @@ CONFIG_MODULES=y
 #
 # Servers
 #
-CONFIG_BOOTSTRAP_BOOTSTRAP=y
-# CONFIG_BOOTSTRAP_MINITEST is not set
+CONFIG_BOOT_TASK_VM=y
+# CONFIG_BOOT_TASK_MINITEST is not set
 
 #
 # Enabled servers
@@ -85,7 +85,7 @@ CONFIG_TEST_SERVER=y
 #
 # Bootstrap
 #
-CONFIG_BOOTSTRAP="bootstrap"
+CONFIG_BOOT_TASK="vm"
 # end of Bootstrap
 
 #
