--- a/ci/minlin.config
+++ b/ci/minlin.config
@@ -41,7 +41,7 @@ CONFIG_MODULES=y
 #
 # Servers
 #
-CONFIG_BOOTSTRAP_BOOTSTRAP=y
+CONFIG_BOOT_TASK_VM=y
 
 #
 # Enabled servers
@@ -85,6 +85,6 @@ CONFIG_PS2KBD_SERVER=y
 #
 # Bootstrap
 #
-CONFIG_BOOTSTRAP="bootstrap"
+CONFIG_BOOT_TASK="vm"
 # end of Bootstrap
 # end of Servers
