--- a/ci/arm_release.config
+++ b/ci/arm_release.config
@@ -42,8 +42,8 @@ CONFIG_MODULES=y
 #
 # Servers
 #
-# CONFIG_BOOTSTRAP_BOOTSTRAP is not set
-CONFIG_BOOTSTRAP_NOMMU_TEST=y
+# CONFIG_BOOT_TASK_VM is not set
+CONFIG_BOOT_TASK_NOMMU_TEST=y
 
 #
 # Enabled servers
@@ -82,7 +82,7 @@ CONFIG_BOOTSTRAP_NOMMU_TEST=y
 # end of Device Drivers
 # end of Enabled servers
 
-CONFIG_BOOTSTRAP="nommu_test"
+CONFIG_BOOT_TASK="nommu_test"
 
 #
 # NOMMU test
