--- a/ci/rust.config
+++ b/ci/rust.config
@@ -41,7 +41,7 @@ CONFIG_MODULES=y
 #
 # Servers
 #
-CONFIG_BOOTSTRAP_BOOTSTRAP=y
+CONFIG_BOOT_TASK_VM=y
 
 #
 # Enabled servers
@@ -85,7 +85,7 @@ CONFIG_HELLO_FROM_RUST_SERVER=y
 #
 # Bootstrap
 #
-CONFIG_BOOTSTRAP="bootstrap"
+CONFIG_BOOT_TASK="vm"
 # end of Bootstrap
 
 #
