--- a/ci/x64_release.config
+++ b/ci/x64_release.config
@@ -42,7 +42,7 @@ CONFIG_MODULES=y
 #
 # Servers
 #
-CONFIG_BOOTSTRAP_BOOTSTRAP=y
+CONFIG_BOOT_TASK_VM=y
 
 #
 # Enabled servers
@@ -84,7 +84,7 @@ CONFIG_TEST_SERVER=y
 #
 # Bootstrap
 #
-CONFIG_BOOTSTRAP="bootstrap"
+CONFIG_BOOT_TASK="vm"
 # end of Bootstrap
 
 #
