--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["Seiya Nuta"]
 language = "en"
 multilingual = false
 src = "docs"
-title = "Resea"
+title = "Resea Documentation"
 
 [output.html]
 default-theme = "rust"
