ci: Fix $EXPECTED variables for make test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,18 +15,25 @@ jobs:
         include:
           - os: ubuntu-20.04
             TARGET: x64
+            EXPECTED: "Passed all tests"
           - os: ubuntu-20.04
             TARGET: arm64
+            EXPECTED: "Passed all tests"
           - os: ubuntu-20.04
             TARGET: arm
+            EXPECTED: "Passed all tests"
           - os: ubuntu-20.04
             TARGET: x64_release
+            EXPECTED: "Passed all tests"
           - os: ubuntu-20.04
             TARGET: arm64_release
+            EXPECTED: "Passed all tests"
           - os: ubuntu-20.04
             TARGET: arm_release
+            EXPECTED: "Passed all tests"
           - os: macos-latest
             TARGET: x64
+            EXPECTED: "Passed all tests"
           - os: ubuntu-20.04
             TARGET: minlin
             EXPECTED: "built-in shell (ash)"
