--- a/servers/Kconfig
+++ b/servers/Kconfig
@@ -49,6 +49,8 @@ menu "Servers"
         menu "Device Drivers"
             config RAMDISK_SERVER
                 tristate "RAM disk driver"
+            config IDE_SERVER
+                tristate "IDE disk driver"
             config E1000_SERVER
                 tristate "e1000 NIC driver"
                 depends on DM_SERVER
