ci: Apply olddefconfig to existing build config files

--- a/ci/rust.config
+++ b/ci/rust.config
@@ -1,12 +1,17 @@
 CONFIG_ARCH_X64=y
 # CONFIG_ARCH_ARM64 is not set
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_EXAMPLE is not set
 CONFIG_BUILD_DEBUG=y
 # CONFIG_BUILD_RELEASE is not set
 
 #
 # Common Setup (kernel and userland)
 #
+# CONFIG_OPT_LEVEL_0 is not set
+CONFIG_OPT_LEVEL_2=y
+# CONFIG_OPT_LEVEL_3 is not set
+# CONFIG_OPT_LEVEL_S is not set
 CONFIG_NUM_SYMBOLS=4096
 # end of Common Setup (kernel and userland)
 
@@ -21,13 +26,22 @@ CONFIG_ARCH="x64"
 CONFIG_LAPIC_TIMER_1MS_COUNT=100000
 # end of x64 Options
 
+CONFIG_SEMIHOSTING=y
 # CONFIG_TRACE_IPC is not set
 CONFIG_IPC_FASTPATH=y
 CONFIG_NUM_TASKS=64
 CONFIG_TASK_NAME_LEN=16
+CONFIG_ONESHOT_HEAP_SIZE=4096
 CONFIG_TASK_TIME_SLICE_MS=10
 CONFIG_KLOG_BUF_SIZE=1024
 CONFIG_ABI_EMU=y
+
+#
+# Security
+#
+CONFIG_DENY_KERNEL_MEMORY_ACCESS=y
+CONFIG_MAX_MAPPABLE_ADDR=0x100000000
+# end of Security
 # end of Kernel
 
 #
@@ -51,6 +65,7 @@ CONFIG_BOOT_TASK_VM=y
 # <*>: autostarted / <M>: manually started from shell
 #
 CONFIG_SHELL_SERVER=y
+# CONFIG_DM_SERVER is not set
 # CONFIG_TCPIP_SERVER is not set
 # CONFIG_WEBAPI_SERVER is not set
 # CONFIG_MINLIN_SERVER is not set
@@ -60,6 +75,7 @@ CONFIG_SHELL_SERVER=y
 #
 # CONFIG_HELLO_SERVER is not set
 # CONFIG_BENCHMARK_SERVER is not set
+# CONFIG_UTILS_SERVER is not set
 # CONFIG_TEST_SERVER is not set
 # end of Applications
 
@@ -73,13 +89,12 @@ CONFIG_SHELL_SERVER=y
 #
 # Device Drivers
 #
-CONFIG_DISPLAY_SERVER=y
-CONFIG_PS2KBD_SERVER=y
 # CONFIG_RAMDISK_SERVER is not set
-# CONFIG_E1000_SERVER is not set
+# CONFIG_IDE_SERVER is not set
 # end of Device Drivers
 
 CONFIG_HELLO_FROM_RUST_SERVER=y
+# CONFIG_EXAMPLE_SERVER is not set
 # end of Enabled servers
 
 #
