--- a/ci/tcpip.config
+++ b/ci/tcpip.config
@@ -8,6 +8,10 @@ CONFIG_BUILD_DEBUG=y
 #
 # Common Setup (kernel and userland)
 #
+# CONFIG_OPT_LEVEL_0 is not set
+CONFIG_OPT_LEVEL_2=y
+# CONFIG_OPT_LEVEL_3 is not set
+# CONFIG_OPT_LEVEL_S is not set
 CONFIG_NUM_SYMBOLS=512
 # end of Common Setup (kernel and userland)
 
@@ -22,6 +26,7 @@ CONFIG_ARCH="x64"
 CONFIG_LAPIC_TIMER_1MS_COUNT=10000
 # end of x64 Options
 
+CONFIG_SEMIHOSTING=y
 # CONFIG_TRACE_IPC is not set
 CONFIG_IPC_FASTPATH=y
 CONFIG_NUM_TASKS=64
@@ -85,7 +90,9 @@ CONFIG_WEBAPI_SERVER=y
 # Device Drivers
 #
 # CONFIG_RAMDISK_SERVER is not set
+# CONFIG_IDE_SERVER is not set
 CONFIG_E1000_SERVER=y
+# CONFIG_VIRTIO_NET_SERVER is not set
 # end of Device Drivers
 
 # CONFIG_HELLO_FROM_RUST_SERVER is not set
