--- a/ci/arm64_release.config
+++ b/ci/arm64_release.config
@@ -1,12 +1,18 @@
 # CONFIG_ARCH_X64 is not set
 CONFIG_ARCH_ARM64=y
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_EXAMPLE is not set
+CONFIG_MACHINE_RASPI3=y
 # CONFIG_BUILD_DEBUG is not set
 CONFIG_BUILD_RELEASE=y
 
 #
 # Common Setup (kernel and userland)
 #
+# CONFIG_OPT_LEVEL_0 is not set
+CONFIG_OPT_LEVEL_2=y
+# CONFIG_OPT_LEVEL_3 is not set
+# CONFIG_OPT_LEVEL_S is not set
 CONFIG_NUM_SYMBOLS=1024
 # end of Common Setup (kernel and userland)
 
@@ -14,21 +20,36 @@ CONFIG_NUM_SYMBOLS=1024
 # Kernel
 #
 CONFIG_ARCH="arm64"
+CONFIG_MACHINE="raspi3"
 
 #
 # ARM64 Options
 #
 # CONFIG_TRACE_EXCEPTION is not set
+# CONFIG_FORCE_REBOOT_BY_WATCHDOG is not set
 # end of ARM64 Options
 
+#
+# Raspberry Pi 3B+ Machine Support
+#
+# end of Raspberry Pi 3B+ Machine Support
+
+CONFIG_SEMIHOSTING=y
 # CONFIG_TRACE_IPC is not set
 CONFIG_IPC_FASTPATH=y
-# CONFIG_NOMMU is not set
 CONFIG_NUM_TASKS=64
 CONFIG_TASK_NAME_LEN=16
+CONFIG_ONESHOT_HEAP_SIZE=4096
 CONFIG_TASK_TIME_SLICE_MS=10
 CONFIG_KLOG_BUF_SIZE=1024
 # CONFIG_ABI_EMU is not set
+
+#
+# Security
+#
+CONFIG_DENY_KERNEL_MEMORY_ACCESS=y
+CONFIG_MAX_MAPPABLE_ADDR=0x100000000
+# end of Security
 # end of Kernel
 
 #
@@ -52,6 +73,7 @@ CONFIG_BOOT_TASK_VM=y
 # <*>: autostarted / <M>: manually started from shell
 #
 # CONFIG_SHELL_SERVER is not set
+# CONFIG_DM_SERVER is not set
 # CONFIG_TCPIP_SERVER is not set
 # CONFIG_WEBAPI_SERVER is not set
 # CONFIG_MINLIN_SERVER is not set
@@ -61,6 +83,7 @@ CONFIG_BOOT_TASK_VM=y
 #
 # CONFIG_HELLO_SERVER is not set
 # CONFIG_BENCHMARK_SERVER is not set
+# CONFIG_UTILS_SERVER is not set
 CONFIG_TEST_SERVER=y
 # end of Applications
 
@@ -74,11 +97,12 @@ CONFIG_TEST_SERVER=y
 #
 # Device Drivers
 #
-# CONFIG_DISPLAY_SERVER is not set
-# CONFIG_PS2KBD_SERVER is not set
 # CONFIG_RAMDISK_SERVER is not set
-# CONFIG_E1000_SERVER is not set
+# CONFIG_IDE_SERVER is not set
 # end of Device Drivers
+
+# CONFIG_HELLO_FROM_RUST_SERVER is not set
+# CONFIG_EXAMPLE_SERVER is not set
 # end of Enabled servers
 
 #
