--- a/ci/example_arch.config
+++ b/ci/example_arch.config
@@ -8,6 +8,10 @@ CONFIG_BUILD_DEBUG=y
 #
 # Common Setup (kernel and userland)
 #
+# CONFIG_OPT_LEVEL_0 is not set
+CONFIG_OPT_LEVEL_2=y
+# CONFIG_OPT_LEVEL_3 is not set
+# CONFIG_OPT_LEVEL_S is not set
 CONFIG_NUM_SYMBOLS=512
 # end of Common Setup (kernel and userland)
 
@@ -22,13 +26,22 @@ CONFIG_ARCH_DEFAULTS=y
 #
 # end of Example Options
 
+CONFIG_SEMIHOSTING=y
 # CONFIG_TRACE_IPC is not set
 CONFIG_IPC_FASTPATH=y
 CONFIG_NUM_TASKS=64
 CONFIG_TASK_NAME_LEN=16
+CONFIG_ONESHOT_HEAP_SIZE=4096
 CONFIG_TASK_TIME_SLICE_MS=10
 CONFIG_KLOG_BUF_SIZE=1024
 # CONFIG_ABI_EMU is not set
+
+#
+# Security
+#
+CONFIG_DENY_KERNEL_MEMORY_ACCESS=y
+CONFIG_MAX_MAPPABLE_ADDR=0x100000000
+# end of Security
 # end of Kernel
 
 #
@@ -52,6 +65,7 @@ CONFIG_BOOT_TASK_VM=y
 # <*>: autostarted / <M>: manually started from shell
 #
 # CONFIG_SHELL_SERVER is not set
+# CONFIG_DM_SERVER is not set
 # CONFIG_TCPIP_SERVER is not set
 # CONFIG_WEBAPI_SERVER is not set
 # CONFIG_MINLIN_SERVER is not set
@@ -61,6 +75,7 @@ CONFIG_BOOT_TASK_VM=y
 #
 # CONFIG_HELLO_SERVER is not set
 # CONFIG_BENCHMARK_SERVER is not set
+# CONFIG_UTILS_SERVER is not set
 # CONFIG_TEST_SERVER is not set
 # end of Applications
 
@@ -74,13 +89,12 @@ CONFIG_BOOT_TASK_VM=y
 #
 # Device Drivers
 #
-# CONFIG_DISPLAY_SERVER is not set
-# CONFIG_PS2KBD_SERVER is not set
 # CONFIG_RAMDISK_SERVER is not set
-# CONFIG_E1000_SERVER is not set
+# CONFIG_IDE_SERVER is not set
 # end of Device Drivers
 
 # CONFIG_HELLO_FROM_RUST_SERVER is not set
+# CONFIG_EXAMPLE_SERVER is not set
 # end of Enabled servers
 
 #
