--- a/ci/x64.config
+++ b/ci/x64.config
@@ -1,12 +1,17 @@
 CONFIG_ARCH_X64=y
 # CONFIG_ARCH_ARM64 is not set
 # CONFIG_ARCH_ARM is not set
+# CONFIG_ARCH_EXAMPLE is not set
 CONFIG_BUILD_DEBUG=y
 # CONFIG_BUILD_RELEASE is not set
 
 #
 # Common Setup (kernel and userland)
 #
+# CONFIG_OPT_LEVEL_0 is not set
+CONFIG_OPT_LEVEL_2=y
+# CONFIG_OPT_LEVEL_3 is not set
+# CONFIG_OPT_LEVEL_S is not set
 CONFIG_NUM_SYMBOLS=512
 # end of Common Setup (kernel and userland)
 
@@ -21,14 +26,22 @@ CONFIG_ARCH="x64"
 CONFIG_LAPIC_TIMER_1MS_COUNT=10000
 # end of x64 Options
 
+CONFIG_SEMIHOSTING=y
 CONFIG_TRACE_IPC=y
 CONFIG_IPC_FASTPATH=y
-# CONFIG_NOMMU is not set
 CONFIG_NUM_TASKS=64
 CONFIG_TASK_NAME_LEN=16
+CONFIG_ONESHOT_HEAP_SIZE=4096
 CONFIG_TASK_TIME_SLICE_MS=10
 CONFIG_KLOG_BUF_SIZE=1024
 CONFIG_ABI_EMU=y
+
+#
+# Security
+#
+CONFIG_DENY_KERNEL_MEMORY_ACCESS=y
+CONFIG_MAX_MAPPABLE_ADDR=0x100000000
+# end of Security
 # end of Kernel
 
 #
@@ -43,7 +56,6 @@ CONFIG_MODULES=y
 # Servers
 #
 CONFIG_BOOT_TASK_VM=y
-# CONFIG_BOOT_TASK_MINITEST is not set
 
 #
 # Enabled servers
@@ -53,6 +65,7 @@ CONFIG_BOOT_TASK_VM=y
 # <*>: autostarted / <M>: manually started from shell
 #
 # CONFIG_SHELL_SERVER is not set
+# CONFIG_DM_SERVER is not set
 # CONFIG_TCPIP_SERVER is not set
 # CONFIG_WEBAPI_SERVER is not set
 # CONFIG_MINLIN_SERVER is not set
@@ -62,6 +75,7 @@ CONFIG_BOOT_TASK_VM=y
 #
 # CONFIG_HELLO_SERVER is not set
 # CONFIG_BENCHMARK_SERVER is not set
+# CONFIG_UTILS_SERVER is not set
 CONFIG_TEST_SERVER=y
 # end of Applications
 
@@ -75,11 +89,12 @@ CONFIG_TEST_SERVER=y
 #
 # Device Drivers
 #
-# CONFIG_DISPLAY_SERVER is not set
-# CONFIG_PS2KBD_SERVER is not set
 # CONFIG_RAMDISK_SERVER is not set
-# CONFIG_E1000_SERVER is not set
+# CONFIG_IDE_SERVER is not set
 # end of Device Drivers
+
+# CONFIG_HELLO_FROM_RUST_SERVER is not set
+# CONFIG_EXAMPLE_SERVER is not set
 # end of Enabled servers
 
 #
